@@ -1,6 +1,6 @@
 package tests;
 
-import jdk.incubator.concurrent.StructuredTaskScope;
+import java.util.concurrent.StructuredTaskScope;
 import transforms.Transform;
 import utils.FileAndNetUtils;
 import utils.Image;
@@ -10,34 +10,34 @@ import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-
-import static utils.ExceptionUtils.*;
+import java.util.function.Supplier;
 
 /**
  * Download, transform, and store {@link Image} objects using the Java
- * structured concurrency framework, which uses the {@link StructuredTaskScope}
- * {@code ShutdownOnFailure()} factory method to create
- * a new virtual thread for each task.  This implementation just applies
- * Java 7 features, i.e., it doesn't use modern Java features at all.
+ * structured concurrency framework, which uses the {@link
+ * StructuredTaskScope} {@code ShutdownOnFailure()} factory method to
+ * create a new virtual thread for each task.  This implementation
+ * just applies Java 7 features, i.e., it doesn't use modern Java
+ * features at all, except for the {@link StructuredTaskScope} class
+ * defined in Java 21.
  */
 public class StructuredConcurrencyTest {
     /**
      * This method uses Java structure concurrency to run the test.
      */
     public static void run(String testName) {
-        // Call downloadImages() to obtain a List of Future<Image>
-        // objects that holds futures to downloaded images.
+        // Call downloadImages() to obtain a List of Supplier<Image>
+        // objects that holds supplier objects to downloaded images.
         var downloadedImages =
             downloadImages(Options.instance().getUrlList());
 
-        // Call transformImages() to obtain a List of Future<Image>
+        // Call transformImages() to obtain a List of Supplier<Image>
         // objects that holds the results of transformed images.
         var transformedImages =
             transformImages(downloadedImages);
 
-        // Call storeImages() to obtain a List of Future<File> objects
+        // Call storeImages() to obtain a List of Supplier<File> objects
         // that hold the results of stored images.
         var storedImages =
             storeImages(transformedImages);
@@ -53,22 +53,22 @@ public class StructuredConcurrencyTest {
      *
      * @param urlList A {@link List} of {@link URL} objects to
      *                download
-     * @return A {@link List} of {@link Future} objects to downloaded
+     * @return A {@link List} of {@link Supplier} objects to downloaded
      *         {@link Image} objects
      */
-    static List<Future<Image>> downloadImages(List<URL> urlList) {
+    static List<Supplier<Image>> downloadImages(List<URL> urlList) {
         // Create a new scope to execute virtual tasks, which exits
         // only after all tasks complete.
         try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-            // A List of Future<Image> objects that complete when the
+            // A List of Supplier<Image> objects that complete when the
             // images have been downloaded asynchronously.
-            List<Future<Image>> downloadedImages
+            List<Supplier<Image>> downloadedImages
                 = new ArrayList<>();
 
             // Iterate through the List of image URLs.
             for (URL url : urlList)
                 downloadedImages
-                    // Add each Future the Future<Image> List.
+                    // Add each Supplier the Supplier<Image> List.
                     .add(scope
                          // submit() starts a virtual thread to
                          // download each image.
@@ -95,29 +95,29 @@ public class StructuredConcurrencyTest {
     /**
      * Transform {@code downloadedImages} asynchronously.
      *
-     * @param downloadedImages A {@link List} of {@link Future}
+     * @param downloadedImages A {@link List} of {@link Supplier}
      *                         objects to images that have been
      *                         downloaded
-     * @return A {@link List} of {@link Future} objects to transformed
+     * @return A {@link List} of {@link Supplier} objects to transformed
      *         {@link Image} objects
      */
-    private static List<Future<Image>> transformImages
-        (List<Future<Image>> downloadedImages) {
+    private static List<Supplier<Image>> transformImages
+        (List<Supplier<Image>> downloadedImages) {
         // Create a new scope to execute virtual tasks, which exits
         // only after all tasks complete.
         try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-            // A List of Future<Image> objects that complete when the
+            // A List of Supplier<Image> objects that complete when the
             // images have been transformed asynchronously.
-            List<Future<Image>> transformedImages =
+            List<Supplier<Image>> transformedImages =
                 new ArrayList<>();
 
-            // Iterate through the List of imageFutures.
-            for (var imageFuture : downloadedImages) {
+            // Iterate through the List of imageSupplier objects.
+            for (var imageSupplier : downloadedImages) {
                 transformedImages
                     // Append the transforming images at the end
                     // of the List.
                     .addAll(transformImage(scope,
-                                           imageFuture.resultNow()));
+                                           imageSupplier.get()));
             }
 
             // Wait until all concurrent tasks complete successfully
@@ -135,33 +135,34 @@ public class StructuredConcurrencyTest {
     /**
      * Stored the {@code transformedImages} asynchronously.
      *
-     * @param transformedImages A {@link List} of {@link Future}
+     * @param transformedImages A {@link List} of {@link Supplier}
      *                          objects to {@link Image} objects that
      *                          have been transformed
-     * @return A {@link List} of {@link Future} objects to stored
+     * @return A {@link List} of {@link Supplier} objects to stored
      *         {@link Image} objects
      */
-    private static List<Future<File>> storeImages
-        (List<Future<Image>> transformedImages) {
+    private static List<Supplier<File>> storeImages
+        (List<Supplier<Image>> transformedImages) {
         // Create a new scope to execute virtual tasks, which exits
         // only after all tasks complete.
         try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-            // A List of Future<File> objects that complete when the
+            // A List of Supplier<File> objects that complete when the
             // images have been stored asynchronously.
-            List<Future<File>> storedFiles =
+            List<Supplier<File>> storedFiles =
                 new ArrayList<>();
 
-            // Iterate through the List of transformed image futures.
-            for (var imageFuture : transformedImages)
+            // Iterate through the List of transformed image
+            // suppliers.
+            for (var imageSupplier : transformedImages)
                 storedFiles
-                    // Add each Future the Future<File> List.
+                    // Add each Supplier the Supplier<File> List.
                     .add(scope
                              // submit() starts a virtual thread to store
                              // each image.
                              .fork(() -> FileAndNetUtils
                                  // Store each transformed image in a
                                  // file.
-                                 .storeImage(imageFuture.resultNow())));
+                                 .storeImage(imageSupplier.get())));
 
             // Scope doesn't exit until all concurrent tasks complete
             // or an exception is thrown.
@@ -183,21 +184,21 @@ public class StructuredConcurrencyTest {
      * {@link Image}.
      *
      * @param image The {@link Image} to transform
-     * @return A {@link List} of {@link Future} objects to transformed
+     * @return A {@link List} of {@link Supplier} objects to transformed
      *         {@link Image} objects
      */
-    private static List<Future<Image>> transformImage
+    private static List<Supplier<Image>> transformImage
         (StructuredTaskScope.ShutdownOnFailure scope,
          Image image) {
 
-        // A List of Future<Image> objects that complete when the
+        // A List of Supplier<Image> objects that complete when the
         // images have been transformed asynchronously.
-        List<Future<Image>> transformedImageFutures = 
+        List<Supplier<Image>> transformedImageSuppliers =
             new ArrayList<>();
 
         // Iterate through the List of Transformed objects.
         for (Transform transform : Options.instance().transforms())
-            transformedImageFutures
+            transformedImageSuppliers
                 .add(scope
                      // submit() starts a virtual thread to transform
                      // each image.
@@ -207,6 +208,6 @@ public class StructuredConcurrencyTest {
 
         // Return the List of transforming images, which may still be
         // transforming at this point.
-        return transformedImageFutures;
+        return transformedImageSuppliers;
     }
 }
